--- a/data/tabular/peptides_soluble/meta.yaml
+++ b/data/tabular/peptides_soluble/meta.yaml
@@ -2,12 +2,12 @@
 name: peptides_soluble
 description: |-
     Solubility was estimated by retrospective analysis of electronic laboratory notebooks.
-            The notebooks were part of a large effort called the Protein Structure Initiative and consider sequences
-            linearly through the following stages: Selected,  Cloned,  Expressed,  Soluble,  Purified, Crystallized,
-            HSQC (heteronuclear single quantum coherence), Structure, and deposited in PDB. The peptides were identified
-            as soluble or insoluble by "Comparing the experimental status at two time points, September 2009 and May 2010,
-            we were able to derive a set of insoluble proteins defined as those which were not
-            soluble in September 2009 and still remained in that state 8 months later."
+    The notebooks were part of a large effort called the Protein Structure Initiative and consider sequences
+    linearly through the following stages: Selected,  Cloned,  Expressed,  Soluble,  Purified, Crystallized,
+    HSQC (heteronuclear single quantum coherence), Structure, and deposited in PDB. The peptides were identified
+    as soluble or insoluble by "Comparing the experimental status at two time points, September 2009 and May 2010,
+    we were able to derive a set of insoluble proteins defined as those which were not
+    soluble in September 2009 and still remained in that state 8 months later."
 targets:
     - id: soluble
       description: The solubility of a peptide sequence (1) or not (0).
@@ -20,7 +20,7 @@ targets:
 benchmarks: []
 identifiers:
     - id: sequence
-      type: Other
+      type: AS_SEQUENCE
       description: amino acid sequence
 license: CC BY 4.0
 links:
