--- a/data/tabular/uniprot_organisms/meta.yaml
+++ b/data/tabular/uniprot_organisms/meta.yaml
@@ -33,5 +33,11 @@ bibtex:
       url = {https://doi.org/10.1093/nar/gkac1052}}
 templates:
     - |-
+      The protein with the {#amino acid sequence|AA sequence!} {other#} can be found in {#the organism |!}{organisms#}.
+    - |-
+      Task: {#Predict|Identify!} the organism in which this {#protein|amino acid sequence|AA sequence|polypeptide!} can be found.
+      {#Amino acid sequence |Sequence|AA sequence!}: {other#}
+      Result: {organisms#}
+    - |-
       User: In what organism can you find the following {#protein|amino-acid sequence|AA sequence|polypeptide!} {other#}?
       Assistant: The given {#polypeptide|protein|amino acid sequence|AA sequence!} can be found in {organisms#}.
