--- a/data/tabular/uniprot_organisms/meta.yaml
+++ b/data/tabular/uniprot_organisms/meta.yaml
@@ -39,5 +39,5 @@ templates:
       {#Amino acid sequence |Sequence|AA sequence!}: {other#}
       Result: {organisms#}
     - |-
-      User: In what organism can you find the following {#protein|amino-acid sequence|AA sequence|polypeptide!} {other#}?
+      User: In what organism can you find the following {#protein|amino acid sequence|AA sequence|polypeptide!} {other#}?
       Assistant: The given {#polypeptide|protein|amino acid sequence|AA sequence!} can be found in {organisms#}.
