--- a/data/tabular/uniprot_reactions/meta.yaml
+++ b/data/tabular/uniprot_reactions/meta.yaml
@@ -46,3 +46,11 @@ templates:
     - |-
       User: Can you {#tell me|come up with!} a {#biochemical |chemical |!}reaction that can be catalyzed by the following {#protein|amino acid sequence|AA sequence|polypeptide!}:\n{other#}
       Assistant: {#Yes, the|Sure, the|Yes, sure, the|The!} {#chemical |biochemical |!}reaction that can be catalyzed by the given {#protein|amino acid sequence|AA sequence|polypeptide!} are:\n{reactions#}
+    - |-
+      Task: {#Predict|Identify!} a {#biochemical |chemical |!}reaction that can be catalyzed by {#this|the following!} {#protein|amino acid sequence|AA sequence|polypeptide!}.
+      {#Amino acid sequence |Sequence|AA sequence!}: {other#}
+      Result:<EOI> {reactions#}
+    - |-
+      Task: {#Generate|Create|Come up with!} a {#protein|amino acid sequence|AA sequence|polypeptide!} that can catalyze {#a|this!} specific {#biochemical |chemical |!}reaction.
+      Reaction: {reactions#}
+      {#Output|Result!}:<EOI> {other#}
