--- a/data/tabular/uniprot_organisms/meta.yaml
+++ b/data/tabular/uniprot_organisms/meta.yaml
@@ -41,3 +41,7 @@ templates:
     - |-
       User: In what organism can you find the following {#protein|amino acid sequence|AA sequence|polypeptide!} {other#}?
       Assistant: The given {#polypeptide|protein|amino acid sequence|AA sequence!} can be found in {organisms#}.
+    - |-
+      Task: {#Predict|Identify!} the organism in which this {#protein|amino acid sequence|AA sequence|polypeptide!} can be found.
+      {#Amino acid sequence |Sequence|AA sequence!}: {other#}
+      Result:<EOI> {organisms#}
