fix column id for identifier

--- a/data/tabular/uniprot_sentences/meta.yaml
+++ b/data/tabular/uniprot_sentences/meta.yaml
@@ -9,7 +9,7 @@ targets:
       names:
           - noun: function
 identifiers:
-    - id: other
+    - id: sequence
       type: other
       description: other
 license: MIT
