--- a/data/tabular/uniprot_sentences/meta.yaml
+++ b/data/tabular/uniprot_sentences/meta.yaml
@@ -33,16 +33,16 @@ bibtex:
       url = {https://doi.org/10.1093/nar/gkac1052}}
 templates:
     - |-
-      User: {#Please describe|Describe!|Please briefly describe|Briefly describe!} the {#biological |biochemical |!}function of {#the|this!} {#protein|amino acid sequence|AA sequence|polypeptide!}: {other#}
+      User: {#Please describe|Describe!|Please briefly describe|Briefly describe!} the {#biological |biochemical |!}function of {#the|this!} {#protein|amino acid sequence|AA sequence|polypeptide!}: {sequence#}
       Assistant: {sentences#}.
     - |-
       User: What {#protein|amino acid sequence|AA sequence|polypeptide!} fits the {#biological |biochemical |!}description {#in the next sentence(s) |!}best?\n{sentences#}
-      Assistant: A {#protein|amino acid sequence|AA sequence|polypeptide!} that fits the {#description|sentences!} is:\n{other#}
+      Assistant: A {#protein|amino acid sequence|AA sequence|polypeptide!} that fits the {#description|sentences!} is:\n{sequence#}
     - |-
       Task: {#Generate|Create|Come up with!} a {#protein|amino acid sequence|AA sequence|polypeptide!} based on the description.
       Description: {sentences#}
-      {#Output|Result!}: {other#}
+      {#Output|Result!}: {sequence#}
     - |-
       Task: {#Generate|Create|Come up with!} a {#protein|amino acid sequence|AA sequence|polypeptide!} based on the description.
       Description: {sentences#}
-      {#Output|Result!}:<EOI> {other#}
+      {#Output|Result!}:<EOI> {sequence#}
