feat: peptides train/valid/test split

--- a/data/tabular/peptides_nonfouling/meta.yaml
+++ b/data/tabular/peptides_nonfouling/meta.yaml
@@ -2,13 +2,13 @@
 name: peptides_nonfouling
 description: |-
     Non-fouling is defined as resistance to non-specific interactions.
-    A non-fouling peptide (positive example) is defined using the mechanism proposed in
-    ref white2012decoding. Briefly, ref white2012decoding, showed that the exterior surfaces
-    of proteins have a significantly different frequency of amino acids, and this increases
-    in aggregation prone environments, like the cytoplasm. Synthesizing self-assembling peptides
-    that follow this amino acid distribution and coating surfaces with the peptides creates
-    non-fouling surfaces. This pattern was also found inside chaperone proteins,
-    another area where resistance to non-specific interactions is important (ref white2012role).
+            A non-fouling peptide (positive example) is defined using the mechanism proposed in
+            ref white2012decoding. Briefly, ref white2012decoding, showed that the exterior surfaces
+            of proteins have a significantly different frequency of amino acids, and this increases
+            in aggregation prone environments, like the cytoplasm. Synthesizing self-assembling peptides
+            that follow this amino acid distribution and coating surfaces with the peptides creates
+            non-fouling surfaces. This pattern was also found inside chaperone proteins,
+            another area where resistance to non-specific interactions is important (ref white2012role).
 targets:
     - id: nonfouling
       description: The nonfouling activity of a peptide sequence (1) or not (0).
@@ -21,7 +21,7 @@ targets:
 benchmarks: []
 identifiers:
     - id: sequence
-      type: AS_SEQUENCE
+      type: Other
       description: amino acid sequence
 license: CC BY 4.0
 links:
@@ -53,84 +53,85 @@ bibtex:
               year={2018},
               publisher={Wiley Online Library}
 templates:
-    - The sequence of {#amino acid|AAs!} {sequence#} {#shows|exhibits|demonstrates!} {nonfouling#no &NULL}{nonfouling__names__adjective} properties.
-    - The amino acid sequence {sequence#} {#shows|exhibits|displays!} {nonfouling#no &NULL}{nonfouling__names__adjective} properties.
-    - Based on the {sequence__description} {#representation |!}{sequence#}, the peptide has {nonfouling#no &NULL}{nonfouling__names__adjective} {#properties|characteristics|features!}.
-    - The {sequence__description} {sequence#} {#represents|is from!} a peptide that is {nonfouling#not &NULL}identified as {nonfouling__names__adjective}.
-    - The {#amino acid sequence|sequence of AAs!} {sequence#} is {nonfouling#not &NULL}{nonfouling__names__adjective}.
+    - The sequence of {#aminoacids|AAs!} {sequence#} {#shows|exhibits|demonstrates!} {nonfouling#no &NULL}{nonfouling__names__adjective} properties.
+    - The aminoacid sequence {sequence#} {#shows|exhibits|displays!} {nonfouling#no &NULL}{nonfouling__names__adjective} properties.
+    - Based on the {sequence__description} {#representation |!}{sequence#}, the aminoacid sequence has {nonfouling#no &NULL}{nonfouling__names__adjective}
+      {#properties|characteristics|features!}.
+    - The {sequence__description} {sequence#} {#represents|is from!} an aminoacid sequence that is {nonfouling#not &NULL}identified as {nonfouling__names__adjective}.
+    - The {#aminoacid sequence |!}{sequence__description} {sequence#} is {nonfouling#not &NULL}{nonfouling__names__adjective}.
     - |-
-      Task: Please classify a amino acid sequence based on the description.
-      Description: A amino acid sequence that is {nonfouling__names__adjective}.
-      {#amino acid sequence |!}: {sequence#}
+      Task: Please classify a aminoacid sequence based on the description.
+      Description: A aminoacid sequence that is {nonfouling__names__adjective}.
+      {#aminoacid sequence |!}{sequence__description}: {sequence#}
       Constraint: Even if you are {#uncertain|not sure!}, you must pick either "True" or "False" without using any {#other|additional!} words.
       Result: {nonfouling#False&True}
     - |-
-      Task: Please classify a amino acid sequence based on the description.
-      Description: A amino acid sequence that is {nonfouling__names__adjective}.
-      {#amino acid sequence |!}: {sequence#}
+      Task: Please classify a aminoacid sequence based on the description.
+      Description: A aminoacid sequence that is {nonfouling__names__adjective}.
+      {#aminoacid sequence |!}{sequence__description}: {sequence#}
       Constraint: Answer the question in a {#full|complete!} sentence.
-      Result: This amino acid sequence is {nonfouling#not &NULL}{nonfouling__names__adjective}.
+      Result: This aminoacid sequence is {nonfouling#not &NULL}{nonfouling__names__adjective}.
     - |-
-      Task: Please {#give me|create|generate!} a {#amino acid sequence |sequence of amino acids|AA sequence!} based on the {#text |!}description{# below|!}.
-      Description: A amino acid sequence of a peptide that is {nonfouling__names__adjective}.
+      Task: Please {#give me|create|generate!} a {#aminoacid sequence |!}{sequence__description} based on the {#text |!}description{# below|!}.
+      Description: A aminoacid sequence that is {nonfouling__names__adjective}.
       Result: {sequence#}
     - |-
-      User: Can you {#tell me|derive|estimate!} if the amino acid sequence {sequence#} is {nonfouling__names__adjective}?
-      Assistant: {nonfouling#No&Yes}, this amino acid sequence is {nonfouling#not &NULL}{nonfouling__names__adjective}.
+      User: Can you {#tell me|derive|estimate!} if the aminoacid sequence with the {sequence__description} {sequence#} is {nonfouling__names__adjective}?
+      Assistant: {nonfouling#No&Yes}, this aminoacid sequence is {nonfouling#not &NULL}{nonfouling__names__adjective}.
     - |-
-      User: Is the amino acid sequence {sequence#} {nonfouling__names__adjective}?
+      User: Is the aminoacid sequence with the {sequence__description} {sequence#} {nonfouling__names__adjective}?
       Assistant: {nonfouling#No&Yes}, it is {nonfouling#not &NULL}{nonfouling__names__adjective}.
     - |-
-      User: Can you {#give me|create|generate!} a amino acid sequence that is {nonfouling#not &NULL}{nonfouling__names__adjective}?
+      User: Can you {#give me|create|generate!} the {sequence__description} of a aminoacid sequence that is {nonfouling#not &NULL}{nonfouling__names__adjective}?
       Assistant: {#Yes|Of course|Sure|Yes, I'm happy to help!}, here you go: {sequence#}
     - |-
-      User: I'm {#searching|looking!} for a amino acid sequence that is {nonfouling#not &NULL}{nonfouling__names__adjective}?
-      Assistant: This is a amino acid sequence that is {nonfouling#not &NULL}{nonfouling__names__adjective}: {sequence#}
+      User: I'm {#searching|looking!} for the {sequence__description} of a aminoacid sequence that is {nonfouling#not &NULL}{nonfouling__names__adjective}?
+      Assistant: This is a aminoacid sequence that is {nonfouling#not &NULL}{nonfouling__names__adjective}: {sequence#}
     - |-
-      User: I want to {#come up with|create|generate!} a {#amino acid sequence |sequence of amino acids|AA sequence!}.
+      User: I want to {#come up with|create|generate!} a {#aminoacid sequence |!}{sequence__description}.
       Assistant: {#This sounds very exciting. |This sounds very interesting. !}Should I consider any {#constraints|specific points!} for the {#generation|creation!}?
-      User: Yes, please. The amino acid sequence should {nonfouling#not &NULL}be {nonfouling__names__adjective}.
-      Assistant: {#Ok|Got it!},{# here you go,|!} this is {nonfouling#not &NULL}{nonfouling__names__adjective}: {sequence#}
+      User: Yes, please. The aminoacid sequence should {nonfouling#not &NULL}be {nonfouling__names__adjective}.
+      Assistant: {#Ok|Got it!},{# here you go,|!} this {sequence__description} is {nonfouling#not &NULL}{nonfouling__names__adjective}: {sequence#}
     - |-
-      User: I want to {#come up with|create|generate!} a {#amino acid sequence |sequence of amino acids|AA sequence!}.
-      Assistant: {#This sounds very exciting. |Nice. | Very interesting. |I would love to help you. |This sounds very interesting. !}Should it be a special {#amino acid sequence|one!}?
-      User: Yes, the amino acid sequence should {nonfouling#not &NULL}be {nonfouling__names__adjective}.
-      Assistant: {#Understood|Got it|Ok!}, this is {nonfouling#not &NULL}{nonfouling__names__adjective}: {sequence#}
-    - Is the {sequence#} {nonfouling__names__adjective}:<EOI> {nonfouling#no&yes}
+      User: I want to {#come up with|create|generate!} a {#aminoacid sequence |!}{sequence__description}.
+      Assistant: {#This sounds very exciting. |This sounds very interesting. !}Should it be a special {#aminoacid sequence|one!}?
+      User: Yes, the aminoacid sequence should {nonfouling#not &NULL}be {nonfouling__names__adjective}.
+      Assistant: {#Understood|Got it|Ok!}, this {sequence__description} is {nonfouling#not &NULL}{nonfouling__names__adjective}: {sequence#}
+    - Is the {sequence__description} {sequence#} {nonfouling__names__adjective}:<EOI> {nonfouling#no&yes}
     - |-
-      Task: Please classify a amino acid sequence based on the description.
-      Description: A amino acid sequence that is {nonfouling__names__adjective}.
-      {#amino acid sequence |!}: {sequence#}
+      Task: Please classify a aminoacid sequence based on the description.
+      Description: A aminoacid sequence that is {nonfouling__names__adjective}.
+      {#aminoacid sequence |!}{sequence__description}: {sequence#}
       Constraint: Even if you are {#uncertain|not sure!}, you must pick either "True" or "False" without using any {#other|additional!} words.
       Result:<EOI> {nonfouling#False&True}
     - |-
-      Task: Please {#give me|create|generate!} a {#amino acid sequence |!} based on the {#text |!}description{# below|!}.
-      Description: A amino acid sequence that is {nonfouling__names__adjective}.
+      Task: Please {#give me|create|generate!} a {#aminoacid sequence |!}{sequence__description} based on the {#text |!}description{# below|!}.
+      Description: A aminoacid sequence that is {nonfouling__names__adjective}.
       Result:<EOI> {sequence#}
     - |-
       Task: Please answer the multiple choice question.
-      Question: Is the amino acid sequence with the {#representation of |!}{sequence#} {nonfouling__names__adjective}?
+      Question: Is the aminoacid sequence with the {sequence__description} {#representation of |!}{sequence#} {nonfouling__names__adjective}?
       Constraint: Even if you are {#uncertain|not sure!}, you must pick either {%multiple_choice_enum%2%aA1} without using any {#other|additional!} words.
       Options:
       {nonfouling%}
       Answer: {%multiple_choice_result}
     - |-
       Task: Please answer the multiple choice question.
-      Question: Is the amino acid sequence with the {#representation of |!}{sequence#} {nonfouling__names__adjective}?
+      Question: Is the aminoacid sequence with the {sequence__description} {#representation of |!}{sequence#} {nonfouling__names__adjective}?
       Constraint: Even if you are {#uncertain|not sure!}, you must pick either {%multiple_choice_enum%2%aA1} without using any {#other|additional!} words.
       Options:
       {nonfouling%}
       Answer:<EOI> {%multiple_choice_result}
     - |-
       Task: Please answer the multiple choice question.
-      Question: Which amino acid sequences are {nonfouling#not &NULL}{nonfouling__names__adjective}?
+      Question: Which aminoacid sequences are {nonfouling#not &NULL}{nonfouling__names__adjective}?
       Constraint: You must select none, one or more options from {%multiple_choice_enum%2-5%aA1} without using any {#other|additional!} words.
       Options:
       {sequence%nonfouling%}
       Answer: {%multiple_choice_result}
     - |-
       Task: Please answer the multiple choice question.
-      Question: Which amino acid sequences are {nonfouling#not &NULL}{nonfouling__names__adjective}?
+      Question: Which aminoacid sequences are {nonfouling#not &NULL}{nonfouling__names__adjective}?
       Constraint: You must select none, one or more options from {%multiple_choice_enum%2-5%aA1} without using any {#other|additional!} words.
       Options:
       {sequence%nonfouling%}
