--- a/data/tabular/peptides_hemolytic/meta.yaml
+++ b/data/tabular/peptides_hemolytic/meta.yaml
@@ -24,7 +24,7 @@ targets:
 benchmarks: []
 identifiers:
     - id: sequence
-      type: AS_SEQUENCE
+      type: Other
       description: amino acid sequence
 license: CC BY 4.0
 links:
@@ -62,84 +62,85 @@ bibtex:
       title = {MoleculeNet: a benchmark for molecular machine learning},
       journal = {Chemical Science}
 templates:
-    - The sequence of {#amino acids|AAs!} {sequence#} {#shows|exhibits|demonstrates!} {hemolytic#no &NULL}{hemolytic__names__adjective} properties.
-    - The amino acid sequence {sequence#} {#shows|exhibits|displays!} {hemolytic#no &NULL}{hemolytic__names__adjective} properties.
-    - Based on the {#amino acid sequence |sequence of amino acids !}{sequence#}, the peptide has {hemolytic#no &NULL}{hemolytic__names__adjective} {#properties|characteristics|features!}.
-    - The {sequence__description} {sequence#} {#represents|is from!} a peptide that is {hemolytic#not &NULL}identified as {hemolytic__names__adjective}.
-    - The {#amino acid sequence|sequence of amino acids!} {sequence#} is {hemolytic#not &NULL}{hemolytic__names__adjective}.
+    - The sequence of {#aminoacids|AAs!} {sequence#} {#shows|exhibits|demonstrates!} {hemolytic#no &NULL}{hemolytic__names__adjective} properties.
+    - The aminoacid sequence {sequence#} {#shows|exhibits|displays!} {hemolytic#no &NULL}{hemolytic__names__adjective} properties.
+    - Based on the {sequence__description} {#representation |!}{sequence#}, the aminoacid sequence has {hemolytic#no &NULL}{hemolytic__names__adjective}
+      {#properties|characteristics|features!}.
+    - The {sequence__description} {sequence#} {#represents|is from!} an aminoacid sequence that is {hemolytic#not &NULL}identified as {hemolytic__names__adjective}.
+    - The {#aminoacid sequence |!}{sequence__description} {sequence#} is {hemolytic#not &NULL}{hemolytic__names__adjective}.
     - |-
-      Task: Please classify a peptide based on the description.
-      Description: A amino acid sequence that is {hemolytic__names__adjective}.
-      {#amino acid sequence |sequence of amino acids!}: {sequence#}
+      Task: Please classify a aminoacid sequence based on the description.
+      Description: A aminoacid sequence that is {hemolytic__names__adjective}.
+      {#aminoacid sequence |!}{sequence__description}: {sequence#}
       Constraint: Even if you are {#uncertain|not sure!}, you must pick either "True" or "False" without using any {#other|additional!} words.
       Result: {hemolytic#False&True}
     - |-
-      Task: Please classify a amino acid sequence based on the description.
-      Description: A amino acid sequence that is {hemolytic__names__adjective}.
-      {#amino acid sequence |sequence of amino acids !}: {sequence#}
+      Task: Please classify a aminoacid sequence based on the description.
+      Description: A aminoacid sequence that is {hemolytic__names__adjective}.
+      {#aminoacid sequence |!}{sequence__description}: {sequence#}
       Constraint: Answer the question in a {#full|complete!} sentence.
-      Result: This amino acid sequence is {hemolytic#not &NULL}{hemolytic__names__adjective}.
+      Result: This aminoacid sequence is {hemolytic#not &NULL}{hemolytic__names__adjective}.
     - |-
-      Task: Please {#give me|create|generate!} a {#amino acid sequence|sequence of amino acids!} based on the {#text |!}description{# below|!}.
-      Description: A amino acid sequence that is {hemolytic__names__adjective}.
+      Task: Please {#give me|create|generate!} a {#aminoacid sequence |!}{sequence__description} based on the {#text |!}description{# below|!}.
+      Description: A aminoacid sequence that is {hemolytic__names__adjective}.
       Result: {sequence#}
     - |-
-      User: Can you {#tell me|derive|estimate!} if the peptide with the {#amino acid sequence|sequence of amino acids!} {sequence#} is {hemolytic__names__adjective}?
-      Assistant: {hemolytic#No&Yes}, this amino acid sequence is {hemolytic#not &NULL}{hemolytic__names__adjective}.
+      User: Can you {#tell me|derive|estimate!} if the aminoacid sequence with the {sequence__description} {sequence#} is {hemolytic__names__adjective}?
+      Assistant: {hemolytic#No&Yes}, this aminoacid sequence is {hemolytic#not &NULL}{hemolytic__names__adjective}.
     - |-
-      User: Is the peptide with the {#amino acid sequence|sequence of amino acids!} {sequence#} {hemolytic__names__adjective}?
+      User: Is the aminoacid sequence with the {sequence__description} {sequence#} {hemolytic__names__adjective}?
       Assistant: {hemolytic#No&Yes}, it is {hemolytic#not &NULL}{hemolytic__names__adjective}.
     - |-
-      User: Can you {#give me|create|generate!} the {sequence__description} of a peptide that is {hemolytic#not &NULL}{hemolytic__names__adjective}?
+      User: Can you {#give me|create|generate!} the {sequence__description} of a aminoacid sequence that is {hemolytic#not &NULL}{hemolytic__names__adjective}?
       Assistant: {#Yes|Of course|Sure|Yes, I'm happy to help!}, here you go: {sequence#}
     - |-
-      User: I'm {#searching|looking!} for the {sequence__description} of a peptide that is {hemolytic#not &NULL}{hemolytic__names__adjective}?
-      Assistant: This is a amino acid sequence that is {hemolytic#not &NULL}{hemolytic__names__adjective}: {sequence#}
+      User: I'm {#searching|looking!} for the {sequence__description} of a aminoacid sequence that is {hemolytic#not &NULL}{hemolytic__names__adjective}?
+      Assistant: This is a aminoacid sequence that is {hemolytic#not &NULL}{hemolytic__names__adjective}: {sequence#}
     - |-
-      User: I want to {#come up with|create|generate!} a {#amino acid sequence|sequence of amino acids|peptide!}.
+      User: I want to {#come up with|create|generate!} a {#aminoacid sequence |!}{sequence__description}.
       Assistant: {#This sounds very exciting. |This sounds very interesting. !}Should I consider any {#constraints|specific points!} for the {#generation|creation!}?
-      User: Yes, please. The amino acid sequence should {hemolytic#not &NULL}be {hemolytic__names__adjective}.
+      User: Yes, please. The aminoacid sequence should {hemolytic#not &NULL}be {hemolytic__names__adjective}.
       Assistant: {#Ok|Got it!},{# here you go,|!} this {sequence__description} is {hemolytic#not &NULL}{hemolytic__names__adjective}: {sequence#}
     - |-
-      User: I want to {#come up with|create|generate!} a {#amino acid sequence|sequence of amino acids|peptide!}.
-      Assistant: {#This sounds very exciting. |This sounds very interesting. !}Should it be a special {#amino acid sequence|one!}?
-      User: Yes, the amino acid sequence should {hemolytic#not &NULL}be {hemolytic__names__adjective}.
+      User: I want to {#come up with|create|generate!} a {#aminoacid sequence |!}{sequence__description}.
+      Assistant: {#This sounds very exciting. |This sounds very interesting. !}Should it be a special {#aminoacid sequence|one!}?
+      User: Yes, the aminoacid sequence should {hemolytic#not &NULL}be {hemolytic__names__adjective}.
       Assistant: {#Understood|Got it|Ok!}, this {sequence__description} is {hemolytic#not &NULL}{hemolytic__names__adjective}: {sequence#}
     - Is the {sequence__description} {sequence#} {hemolytic__names__adjective}:<EOI> {hemolytic#no&yes}
     - |-
-      Task: Please classify a {#amino acid sequence|sequence of amino acids|peptide!} based on the description.
-      Description: A amino acid sequence that is {hemolytic__names__adjective}.
-      {#amino acid sequence|sequence of amino acids!}: {sequence#}
+      Task: Please classify a aminoacid sequence based on the description.
+      Description: A aminoacid sequence that is {hemolytic__names__adjective}.
+      {#aminoacid sequence |!}{sequence__description}: {sequence#}
       Constraint: Even if you are {#uncertain|not sure!}, you must pick either "True" or "False" without using any {#other|additional!} words.
       Result:<EOI> {hemolytic#False&True}
     - |-
-      Task: Please {#give me|create|generate!} a {#amino acid sequence|sequence of amino acids|peptide!} based on the {#text |!}description{# below|!}.
-      Description: A {#amino acid sequence|sequence of amino acids|peptide!} that is {hemolytic__names__adjective}.
+      Task: Please {#give me|create|generate!} a {#aminoacid sequence |!}{sequence__description} based on the {#text |!}description{# below|!}.
+      Description: A aminoacid sequence that is {hemolytic__names__adjective}.
       Result:<EOI> {sequence#}
     - |-
       Task: Please answer the multiple choice question.
-      Question: Is the peptide with the {sequence__description} {#representation of |!}{sequence#} {hemolytic__names__adjective}?
+      Question: Is the aminoacid sequence with the {sequence__description} {#representation of |!}{sequence#} {hemolytic__names__adjective}?
       Constraint: Even if you are {#uncertain|not sure!}, you must pick either {%multiple_choice_enum%2%aA1} without using any {#other|additional!} words.
       Options:
       {hemolytic%}
       Answer: {%multiple_choice_result}
     - |-
       Task: Please answer the multiple choice question.
-      Question: Is the peptide with the {sequence__description} {#representation of |!}{sequence#} {hemolytic__names__adjective}?
+      Question: Is the aminoacid sequence with the {sequence__description} {#representation of |!}{sequence#} {hemolytic__names__adjective}?
       Constraint: Even if you are {#uncertain|not sure!}, you must pick either {%multiple_choice_enum%2%aA1} without using any {#other|additional!} words.
       Options:
       {hemolytic%}
       Answer:<EOI> {%multiple_choice_result}
     - |-
       Task: Please answer the multiple choice question.
-      Question: Which amino acid sequences are {hemolytic#not &NULL}{hemolytic__names__adjective}?
+      Question: Which aminoacid sequences are {hemolytic#not &NULL}{hemolytic__names__adjective}?
       Constraint: You must select none, one or more options from {%multiple_choice_enum%2-5%aA1} without using any {#other|additional!} words.
       Options:
       {sequence%hemolytic%}
       Answer: {%multiple_choice_result}
     - |-
       Task: Please answer the multiple choice question.
-      Question: Which amino acid sequences are {hemolytic#not &NULL}{hemolytic__names__adjective}?
+      Question: Which aminoacid sequences are {hemolytic#not &NULL}{hemolytic__names__adjective}?
       Constraint: You must select none, one or more options from {%multiple_choice_enum%2-5%aA1} without using any {#other|additional!} words.
       Options:
       {sequence%hemolytic%}
