--- a/data/tabular/uniprot_organisms/meta.yaml
+++ b/data/tabular/uniprot_organisms/meta.yaml
@@ -10,7 +10,7 @@ targets:
           - noun: organisms
 identifiers:
     - id: other
-      type: other
+      type: AS_SEQUENCE
       description: other
 license: MIT
 links:
