--- a/data/tabular/uniprot_organisms/meta.yaml
+++ b/data/tabular/uniprot_organisms/meta.yaml
@@ -16,7 +16,7 @@ license: MIT
 links:
     - url: https://www.uniprot.org/
       description: data source
-num_points: 560033
+num_points: 559428
 bibtex:
     - |-
       @article{10.1093/nar/gkac1052,
@@ -39,7 +39,7 @@ templates:
       {#Amino acid sequence |Sequence|AA sequence!}: {other#}
       Result: {organisms#}
     - |-
-      User: In what organism can you find the following {#protein|amino acid sequence|AA sequence|polypeptide!} {other#}?
+      User: In what organism can you find the following {#protein|amino acid sequence|AA sequence|polypeptide!}: {other#}?
       Assistant: The given {#polypeptide|protein|amino acid sequence|AA sequence!} can be found in {organisms#}.
     - |-
       Task: {#Predict|Identify!} the organism in which this {#protein|amino acid sequence|AA sequence|polypeptide!} can be found.
