feat: add more diverse templates incl. benchmark templates to uniprot_binding_sites

--- a/data/tabular/uniprot_binding_sites/meta.yaml
+++ b/data/tabular/uniprot_binding_sites/meta.yaml
@@ -13,15 +13,15 @@ targets:
       type: text
       names:
           - noun: end binding site
+identifiers:
+    - id: sequence
+      type: AS_SEQUENCE
+      description: other
     - id: SMILES
       description: SMILES
       type: SMILES
       names:
           - noun: SMILES
-identifiers:
-    - id: sequence
-      type: AS_SEQUENCE
-      description: other
 license: MIT
 links:
     - url: https://www.uniprot.org/
@@ -42,17 +42,34 @@ bibtex:
       doi = {10.1093/nar/gkac1052},
       url = {https://doi.org/10.1093/nar/gkac1052}}
 templates:
+#    - |-
+#      The {#molecule|chemical|compound!} with the {SMILES__description}{# representation|!} {SMILES#} binds to the {#AA sequence|amino acid sequence|peptide sequence|protein!} {sequence#} at the {#site|binding site|position!} {start_binding_site#}{#-| to !}{end_binding_site#}.
     - |-
-      Question: What are the binding sites of the {#molecule|chemical|compound!} with {SMILES__description} {SMILES#} in this {#AA|amino acid!} sequence {sequence#}?
-      Answer: The binding site for the {#molecule|chemical|compound!} with the SMILES {SMILES#} in the given {#AA|amino acid!} sequence is: {start_binding_site#}-{end_binding_site#}.
+      Task: {#Find|Identify|Come up with!} a binding site in the {#AA sequence|amino acid sequence|peptide sequence|protein!} for the {#molecule|chemical|compound!}.
+      {#AA sequence|Amino acid sequence|Peptide sequence|Protein!}: {sequence#}
+      {SMILES__description}{# representation|!}: {SMILES#}
+      Constraint: Please {#always |!}{#indicate|show!} the {#site|binding site|position!} with a range without any additional words. When {#the range is of length one|the length is one!} please use the same {#index|position!} for the {#start|beginning!} and the end{# position|!}.
+      {#Output|Result!}: {start_binding_site#}-{end_binding_site#}
     - |-
-      Question: What molecule can bind in the binding site {start_binding_site#}-{end_binding_site#} in the amino acid sequence below?
-      {#AA|amino acid!} sequence: {sequence#}.
+      Task: {#Create|Design|Come up with!} a {#molecule|chemical|compound!} that binds to the given {#binding site|site|position|!} in the {#AA sequence|amino acid sequence|peptide sequence|protein!}.
+      {#AA sequence|Amino acid sequence|Peptide sequence|Protein!}: {sequence#}
+      Binding site{# position|!}: {start_binding_site#}{#-| to !}{end_binding_site#}
+      {#Output|Result!}: {SMILES#}
+    - |-
+      Question: Can you {#give me one example of a|find one!} binding site of the {#molecule|chemical|compound!} with the {SMILES__description}{# representation|!} {SMILES#} in this {#AA sequence|amino acid sequence|peptide sequence|protein!} {sequence#}?
+      Answer: One {#possible |!}{#binding |!}site for the {#chemical|molecule|compound!} is {start_binding_site#}{#-| to !}{end_binding_site#}.
+    - |-
+      Question: What {#molecule|chemical|compound!} can {#possibly |!}bind to the {#binding |!}site {#at |at the position !}{start_binding_site#}{#-| to !}{end_binding_site#} in the {#given |!}{#AA|amino acid|protein!} sequence{# below|!}?
+      Sequence: {sequence#}
       Answer: {SMILES#}
     - |-
-      Task: Design a binding site in the {#AA|amino acid!} sequence {sequence#}, in which the {#molecule|chemical|compound!} with {SMILES__description} {SMILES#} can bind.
-      Answer: {start_binding_site#}-{end_binding_site#}
+      Task: {#Find|Identify|Come up with!} a binding site in the {#AA sequence|amino acid sequence|peptide sequence|protein!} for the {#molecule|chemical|compound!}.
+      {#AA sequence|Amino acid sequence|Peptide sequence|Protein!}: {sequence#}
+      {SMILES__description}{# representation|!}: {SMILES#}
+      Constraint: Please {#always |!}{#indicate|show!} the {#site|binding site|position!} with a range without any additional words. When {#the range is of length one|the length is one!} please use the same {#index|position!} for the {#start|beginning!} and the end{# position|!}.
+      {#Output|Result!}:<EOI> {start_binding_site#}-{end_binding_site#}
     - |-
-      Task: Design a {#molecule|chemical|compound!} that binds to a given site in the {#AA|amino acid!} sequence {sequence#}.
-      Description: The binding site is {start_binding_site#}-{end_binding_site#}.
-      Answer: {SMILES#}
+      Task: {#Create|Design|Come up with!} a {#molecule|chemical|compound!} that binds to the given {#binding site|site|position|!} in the {#AA sequence|amino acid sequence|peptide sequence|protein!}.
+      {#AA sequence|Amino acid sequence|Peptide sequence|Protein!}: {sequence#}
+      Binding site{# position|!}: {start_binding_site#}{#-| to !}{end_binding_site#}
+      {#Output|Result!}:<EOI> {SMILES#}
