--- a/data/tabular/uniprot_organisms/meta.yaml
+++ b/data/tabular/uniprot_organisms/meta.yaml
@@ -35,13 +35,13 @@ templates:
     - |-
       The protein with the {#amino acid sequence|AA sequence!} {other#} can be found in {#the organism |!}{organisms#}.
     - |-
-      Task: {#Predict|Identify!} the organism in which this {#protein|amino acid sequence|AA sequence|polypeptide!} can be found.
+      Task: {#Predict|Identify!} the organism in which {#the below|this!} {#protein|amino acid sequence|AA sequence|polypeptide!} can be found.
       {#Amino acid sequence |Sequence|AA sequence!}: {other#}
       Result: {organisms#}
     - |-
-      User: In what organism can you find the following {#protein|amino acid sequence|AA sequence|polypeptide!}: {other#}?
-      Assistant: The given {#polypeptide|protein|amino acid sequence|AA sequence!} can be found in {organisms#}.
+      User: In what organism can you find the following {#protein|amino acid sequence|AA sequence|polypeptide!}:\n{other#}
+      Assistant: The given {#protein|amino acid sequence|AA sequence|polypeptide!} can be found in {organisms#}.
     - |-
-      Task: {#Predict|Identify!} the organism in which this {#protein|amino acid sequence|AA sequence|polypeptide!} can be found.
+      Task: {#Predict|Identify!} the organism in which {#the below|this!} {#protein|amino acid sequence|AA sequence|polypeptide!} can be found.
       {#Amino acid sequence |Sequence|AA sequence!}: {other#}
       Result:<EOI> {organisms#}
